Trim codes